updated api specs with common component naming
